--- a/Window Walker/Window Walker/MainWindow.xaml
+++ b/Window Walker/Window Walker/MainWindow.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        xmlns:windowwalker="clr-namespace:WindowWalker"
         Title="MainWindow" Width="1000" MinHeight="10" Height="85" ResizeMode="NoResize" Topmost="True" WindowStyle="None" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen" SizeToContent="Height" Visibility="{Binding WindowVisibility, Mode=TwoWay, Converter={StaticResource BoolToVis}}"
         BorderBrush="{DynamicResource PrimaryHueDarkBrush}"
         BorderThickness="2"        
@@ -14,6 +15,7 @@
     <Window.Resources>
         <ResourceDictionary>    
             <BooleanToVisibilityConverter x:Key="BoolToVis" />
+            <windowwalker:IntToDoubleValueConverter x:Key="IntToDoubleValueConverter"/>
         </ResourceDictionary>
     </Window.Resources>
     <Grid>
@@ -28,7 +30,19 @@
                                 <ColumnDefinition Width="200"/>
                             </Grid.ColumnDefinitions>
                             <TextBlock Grid.Column="0" Text="{Binding ResultWindow.Title}"/>
+                            <Canvas Grid.Column="0">
+                                <ItemsControl ItemsSource="{Binding SearchMatchesInTitle}">
+                                    <ItemsControl.ItemTemplate>
+                                        <DataTemplate>
+                                            <Canvas>
+                                                <Rectangle Fill="#000000" Opacity="0.4" Height="25" Width="10" Canvas.Left="{Binding  Converter={StaticResource IntToDoubleValueConverter}}" Canvas.Top="0"/>
+                                            </Canvas>
+                                        </DataTemplate>
+                                    </ItemsControl.ItemTemplate>
+                                </ItemsControl>
+                            </Canvas>
                             <TextBlock Grid.Column="1" TextAlignment="Right" Text="{Binding ResultWindow.ProcessName}"/>
+                            <Canvas Grid.Column="1"/>
                         </Grid>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
