Switch link to new download page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="https://github.com/betsegaw/windowwalker/releases">Download</a>
+                        <a class="page-scroll" href="https://download.windowwalker.com/WindowWalker.application">Download</a>
                     </li>
                 </ul>
             </div>
