--- a/Window Walker/Window Walker/MainWindow.xaml
+++ b/Window Walker/Window Walker/MainWindow.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        xmlns:local="clr-namespace:WindowWalker"
         Title="MainWindow" Width="1000" MinHeight="10" Height="85" ResizeMode="NoResize" Topmost="True" WindowStyle="None" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen" SizeToContent="Height" Visibility="{Binding WindowVisibility, Mode=TwoWay, Converter={StaticResource BoolToVis}}"
         BorderBrush="{DynamicResource PrimaryHueDarkBrush}"
         BorderThickness="2"        
@@ -15,6 +16,7 @@
     <Window.Resources>
         <ResourceDictionary>    
             <BooleanToVisibilityConverter x:Key="BoolToVis" />
+            <local:WindowSearchResultToXamlConverter x:Key="windowSearchResultToXamlConverter"/>
         </ResourceDictionary>
     </Window.Resources>
     <Grid>
@@ -28,7 +30,8 @@
                                 <ColumnDefinition Width="*"/>
                                 <ColumnDefinition Width="200"/>
                             </Grid.ColumnDefinitions>
-                            <TextBlock Grid.Column="0" Text="{Binding ResultWindow.Title}"/>
+                            <!--<TextBlock Grid.Column="0" Text="{Binding ResultWindow.Title}"/>-->
+                            <ContentControl Grid.Column="0"  Content="{Binding ResultWindow, Converter={StaticResource windowSearchResultToXamlConverter}, Mode=OneTime}"/>
                             <!--<TextBlock Grid.Column="1" TextAlignment="Right" Text="{Binding ResultWindow.ProcessName}"/>-->
                         </Grid>
                     </DataTemplate>
