--- a/_includes/header.html
+++ b/_includes/header.html
@@ -37,6 +37,7 @@
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
+        <a href="https://github.com/betsegaw/windowwalker"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
     </header>
 <!--
         {% for page in site.pages %}
