--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,13 +5,12 @@
 
 
     <body id="page-top" class="index">
+    <a class="github-fork-ribbon" href="https://github.com/betsegaw/windowwalker" data-ribbon="Fork me on GitHub" title="Fork me on GitHub">Fork me on GitHub</a>
     {% include header.html %}
     {% include services.html %}
     {% include portfolio_grid.html %}
     {% include footer.html %}
     {% include modals.html %}
     {% include js.html %}
-
-    <a href="https://github.com/betsegaw/windowwalker"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
     </body>
 </html>
